# secure-code-analyzer-model

./: .gitignore  DOCUMENTATION.md  Makefile  README.md  Vulnerability_Detection_BERT_Presentation.pptx  generate_plots.py  pyproject.toml  test_shap_vis.py
configs/: config.py
reports/: metrics.json  model_card.md
scripts/: calibrate_threshold.py  token_length_analysis.py
src/api/: main.py  schemas.py
src/data/: dataset_loader.py  preprocessing.py
src/explainability/: global_explainer.py  lime_explainer.py  shap_explainer.py  visualizer.py
src/model/: evaluate.py  model_loader.py  predict.py  train.py
src/utils/: device.py  logger.py  visualizer.py
