[project]
name = "vuln-detector"
version = "1.1.0"
description = "Vulnerability detection in C/C++ code using CodeBERT and High-Transparency explainability."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=1.1.0",
    "datasets>=2.19.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "shap>=0.45.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.1",
    "lime>=0.2.0.1",
    "rich>=13.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "black>=24.4.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
